--- a/Homework1/index4.html
+++ b/Homework1/index4.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h1><center> Заголовок первого уровня</center> </h1>
+    <h1>
+        <center> Заголовок первого уровня</center>
+    </h1>
     <h4><b>Предварительно форматированный текст:</b></h4>
     <p>
     <pre>
@@ -56,32 +58,38 @@
     <p><code>#!/usr/local/bin/perl<br>
         print "Content‐type: text/html\n\n";<br>
         print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</code><br></p>
-        <p>Программа выведет:<br><br>
+    <p>Программа выведет:<br><br>
         <code>Hello, World!</code><br><br>
         Однако в браузере у нас будет отображаться результат выполнения этой программы:
-        <h1>Hello, World!</h1></p>
-        <hr>
-        <h4><b>Комментарии и литералы(мнемоники) в HTML</b></h4>
-        <p><code>&lt;!‐‐ это комментарий ‐‐&gt;<br>
+    <h1>Hello, World!</h1>
+    </p>
+    <hr>
+    <h4><b>Комментарии и литералы(мнемоники) в HTML</b></h4>
+    <p><code>&lt;!‐‐ это комментарий ‐‐&gt;<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;!‐‐ и это также комментарий,<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;занимающий более одной строки ‐‐&gt;<br></code></p>
-            <hr>
-            <h4><b>Теги над-­ и подстрочных символов</b></h4>
-            <p><center><b>Магазин работает:</b></center></p>
-            <p><center>c 08<sup><u>30</u></sup> до 18<sup><u>30</u></sup><br>
-                обед с 13<sup><u>00</u></sup> до 14<sup><u>00</u></sup><br>
-                выходной: <u>суббота</u>, <u>воскресенье</u></center><br></p>
-            <hr>
-            <h4><b>Вот такой текст</b></h4>
-         <p>   Э&nbsp;о&nbsp;&nbsp;р&nbsp;с&nbsp;о&nbsp;&nbsp;е&nbsp;ё&nbsp;ы&nbsp;&nbsp;т&nbsp;к&nbsp;т<br>
-            &nbsp; т&nbsp;&nbsp;п&nbsp;о&nbsp;т&nbsp;&nbsp;в&nbsp;с&nbsp;л&nbsp;&nbsp;й&nbsp;е&nbsp;с
-        </p>
-        <hr>
-        <h4><b>Акроним и курсив</b></h4>
-        <p>ТФ: Y<i>(x)</i>=e <sup><i>-­iπx</i></sup>+log<sub><i>x</i></sub>4</p>
-        <hr>
-        <p><b>Тег small внтури абзаца</b></p>
-        <p align="right">Создано при помощи блокнота©</p>
-    </body>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;занимающий более одной строки ‐‐&gt;<br></code>
+    </p>
+    <hr>
+    <h4><b>Теги над-­ и подстрочных символов</b></h4>
+    <p>
+        <center><b>Магазин работает:</b></center>
+    </p>
+    <p>
+        <center>c 08<sup><u>30</u></sup> до 18<sup><u>30</u></sup><br>
+            обед с 13<sup><u>00</u></sup> до 14<sup><u>00</u></sup><br>
+            выходной: <u>суббота</u>, <u>воскресенье</u></center><br>
+    </p>
+    <hr>
+    <h4><b>Вот такой текст</b></h4>
+    <p> Э&nbsp;о&nbsp;&nbsp;р&nbsp;с&nbsp;о&nbsp;&nbsp;е&nbsp;ё&nbsp;ы&nbsp;&nbsp;т&nbsp;к&nbsp;т<br>
+        &nbsp; т&nbsp;&nbsp;п&nbsp;о&nbsp;т&nbsp;&nbsp;в&nbsp;с&nbsp;л&nbsp;&nbsp;й&nbsp;е&nbsp;с
+    </p>
+    <hr>
+    <h4><b>Акроним и курсив</b></h4>
+    <p>ТФ: Y<i>(x)</i>=e <sup><i>-­iπx</i></sup>+log<sub><i>x</i></sub>4</p>
+    <hr>
+    <p><b>Тег small внтури абзаца</b></p>
+    <p align="right">Создано при помощи блокнота©</p>
+</body>
 
 </html>
