--- a/Homework1/index2.html
+++ b/Homework1/index2.html
@@ -52,7 +52,8 @@
         <p>Таким образом, в <b>categories[0]</b> хранится <i>'Main dish'</i>, а в <b>categories[4]</b> —
             <i>'Cookies'</i>. Всё
             очень просто. Я уверен, вы сможете придумать много других примеров использования
-            списков.</p>
+            списков.
+        </p>
         <hr>
         <h2>Комментарии</h2>
         <p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам.
