--- a/Homework1/index4.html
+++ b/Homework1/index4.html
@@ -35,23 +35,20 @@
     <hr>
     <h4><b>Работа со строчными и блоковыми цитатами</b></h4>
     <p>Цитата короткая:<br>
-        <i>И всё­таки она вертится!</i>
-    </p>
+        <i>И всё­таки она вертится!</i></p>
     <p>Цитата занимающая несколько предложений:<br><br>
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;О сколько нам открытий чудных<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Готовят просвещенья дух<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;И опыт, сын ошибок трудных,<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;И гений, парадоксов друг,<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;И случай, бог изобретатель... <br>
-    </p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;И случай, бог изобретатель... <br></p>
     <hr>
     <h4><b>Семантические и функциональные строчные теги</b></h4>
     <p> <strong>Тэг &lt;STRONG&gt; делает данный фрагмент текста более важным.</strong> <em>Тэг &lt;em&gt; менее
             важным.</em>
         В то время как теги &lt;b&gt; и &lt;i&gt; делают текст просто <b>полужирным</b> и <i>курсивом</i>
-        соответственно.
-    </p>
+        соответственно.</p>
     <hr>
     <h4><b>Теги форматирования машинного языка</b></h4>
     <p>При выполнении программного кода на языке PERL:</p>
@@ -61,29 +58,24 @@
     <p>Программа выведет:<br><br>
         <code>Hello, World!</code><br><br>
         Однако в браузере у нас будет отображаться результат выполнения этой программы:
-    <h1>Hello, World!</h1>
-    </p>
+    <h1>Hello, World!</h1></p>
     <hr>
     <h4><b>Комментарии и литералы(мнемоники) в HTML</b></h4>
     <p><code>&lt;!‐‐ это комментарий ‐‐&gt;<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;!‐‐ и это также комментарий,<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;занимающий более одной строки ‐‐&gt;<br></code>
-    </p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;занимающий более одной строки ‐‐&gt;<br></code></p>
     <hr>
     <h4><b>Теги над-­ и подстрочных символов</b></h4>
     <p>
-        <center><b>Магазин работает:</b></center>
-    </p>
+        <center><b>Магазин работает:</b></center></p>
     <p>
         <center>c 08<sup><u>30</u></sup> до 18<sup><u>30</u></sup><br>
             обед с 13<sup><u>00</u></sup> до 14<sup><u>00</u></sup><br>
-            выходной: <u>суббота</u>, <u>воскресенье</u></center><br>
-    </p>
+            выходной: <u>суббота</u>, <u>воскресенье</u></center><br></p>
     <hr>
     <h4><b>Вот такой текст</b></h4>
     <p> Э&nbsp;о&nbsp;&nbsp;р&nbsp;с&nbsp;о&nbsp;&nbsp;е&nbsp;ё&nbsp;ы&nbsp;&nbsp;т&nbsp;к&nbsp;т<br>
-        &nbsp; т&nbsp;&nbsp;п&nbsp;о&nbsp;т&nbsp;&nbsp;в&nbsp;с&nbsp;л&nbsp;&nbsp;й&nbsp;е&nbsp;с
-    </p>
+        &nbsp; т&nbsp;&nbsp;п&nbsp;о&nbsp;т&nbsp;&nbsp;в&nbsp;с&nbsp;л&nbsp;&nbsp;й&nbsp;е&nbsp;с</p>
     <hr>
     <h4><b>Акроним и курсив</b></h4>
     <p>ТФ: Y<i>(x)</i>=e <sup><i>-­iπx</i></sup>+log<sub><i>x</i></sub>4</p>
