--- a/Homework1/index3.html
+++ b/Homework1/index3.html
@@ -37,8 +37,7 @@
             одинаково на <u>Linux</u>, <u>Ma</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля
             необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
             называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
-            используем этот модуль в нашем первом примере.
-        </p>
+            используем этот модуль в нашем первом примере.</p>
         <p><code>#=======================================<Br>
                 # random_example.py<Br>
                 # Module example using the random module<Br>
@@ -74,8 +73,7 @@
                         print '%d + %d = %d ' % (10,5,10+5)<Br>
                         print '%d * %d = %d ' % (10,5,10*5)<Br>
                         print '%d - %d = %d ' % (10,5,10-5)<Br>
-                        print '\n'</code>
-        </p>
+                        print '\n'</code></p>
         <p>Здесь нужно не только набрать много текста, но и непременно возникнут ошибки как при
             написании, так и при внесении изменений. Вместо этого мы создадим функцию, которую
             назовём <b>«DoTwo»</b>. Она будет каждый раз брать два числа, проводить математические
