--- a/01_HTML/add/index4.html
+++ b/01_HTML/add/index4.html
@@ -9,20 +9,17 @@
 </head>
 
 <body>
-    <h1>
-        <center> Заголовок первого уровня</center>
-    </h1>
+    <h1 alighn="center"> Заголовок первого уровня </h1>
     <h4><b>Предварительно форматированный текст:</b></h4>
-    <p>
     <pre>
      x | o |
     ‐‐‐‐‐‐‐‐‐‐‐
        | х |
     ‐‐‐‐‐‐‐‐‐‐‐
-     o | x | o </pre>
-    </p>
+     o | x | o 
+    </pre>
     <hr>
-    <h4><b>Тег address</b></h4>
+    <h4>Тег address</h4>
     <address>Kuprevicha, 1/1, 220141, Minsk, Belarus. Phone: +375.17.2686911</address>
     <hr>
     <h4><b>Семантические и функциональные строчные теги</b></h4>
@@ -35,7 +32,8 @@
     <hr>
     <h4><b>Работа со строчными и блоковыми цитатами</b></h4>
     <p>Цитата короткая:<br>
-        <i>И всё­таки она вертится!</i></p>
+        <i>И всё­таки она вертится!</i>
+    </p>
     <p>Цитата занимающая несколько предложений:<br><br>
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;О сколько нам открытий чудных<br>
@@ -56,22 +54,27 @@
         print "Content‐type: text/html\n\n";<br>
         print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</code><br></p>
     <p>Программа выведет:<br><br>
-        <code>Hello, World!</code><br><br>
-        Однако в браузере у нас будет отображаться результат выполнения этой программы:
-    <h1>Hello, World!</h1></p>
+        <code>Hello, World!</code>
+    </p><br><br>
+    <p>Однако в браузере у нас будет отображаться результат выполнения этой программы:</p>
+    <h1>Hello, World!</h1>
+
     <hr>
     <h4><b>Комментарии и литералы(мнемоники) в HTML</b></h4>
     <p><code>&lt;!‐‐ это комментарий ‐‐&gt;<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;!‐‐ и это также комментарий,<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;занимающий более одной строки ‐‐&gt;<br></code></p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;занимающий более одной строки ‐‐&gt;<br></code>
+    </p>
     <hr>
     <h4><b>Теги над-­ и подстрочных символов</b></h4>
-    <p>
-        <center><b>Магазин работает:</b></center></p>
+    
+        <center><b>Магазин работает:</b></center>
+   
     <p>
         <center>c 08<sup><u>30</u></sup> до 18<sup><u>30</u></sup><br>
             обед с 13<sup><u>00</u></sup> до 14<sup><u>00</u></sup><br>
-            выходной: <u>суббота</u>, <u>воскресенье</u></center><br></p>
+            выходной: <u>суббота</u>, <u>воскресенье</u></center><br>
+    </p>
     <hr>
     <h4><b>Вот такой текст</b></h4>
     <p> Э&nbsp;о&nbsp;&nbsp;р&nbsp;с&nbsp;о&nbsp;&nbsp;е&nbsp;ё&nbsp;ы&nbsp;&nbsp;т&nbsp;к&nbsp;т<br>
