--- a/01_HTML/base/index3.html
+++ b/01_HTML/base/index3.html
@@ -11,16 +11,16 @@
 <body>
     <h1>HOW-TO: Программа на Python, Часть 3</h1>
     <ul>
-        <em>
-            <li>Программа на Python — часть 1</li>
-            <li>Программа на Python — часть 2</li>
-            <li>Программа на Python — часть 3</li>
-        </em>
+        <li><em>Программа на Python — часть 1</em></li>
+        <li><em>Программа на Python — часть 2</em></li>
+        <li><em>Программа на Python — часть 3</em></li>
     </ul>
     <h2>Содержание</h2>
     <h3>HOW-TO: Программа на Python, Часть 3</h2>
-        <li><u>Модули</li></u>
-        <li><u>Функции</li></u><br>
+        <ul>
+            <li><u>Модули</u></li>
+            <li><u>Функции</u></li>
+        </ul>
         <hr>
         <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и
             присвоение, операторы <b>if</b> и <b>while</b>. Я обещал, что в этой части мы изучим модули и
@@ -37,7 +37,8 @@
             одинаково на <u>Linux</u>, <u>Ma</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля
             необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
             называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
-            используем этот модуль в нашем первом примере.</p>
+            используем этот модуль в нашем первом примере.
+        </p>
         <p><code>#=======================================<Br>
                 # random_example.py<Br>
                 # Module example using the random module<Br>
