--- a/01_HTML/base/index1.html
+++ b/01_HTML/base/index1.html
@@ -11,19 +11,15 @@
 <body>
     <h1>HOW-TO: Программа на Python, Часть 1</h1>
     <ul>
-        <em>
-            <li>Программа на Python — часть 1</li>
-            <li>Программа на Python — часть 2</li>
-            <li>Программа на Python — часть 3</li>
-        </em>
+            <li><em>>Программа на Python — часть 1</em</li>
+            <li><em>Программа на Python — часть 2</em</li>
+            <li><em>Программа на Python — часть 3</em</li>
     </ul>
     <h2>Содержание</h2>
-    <h3>HOW-TO: Программа на Python, Часть 1</h2>
+    <h3>HOW-TO: Программа на Python, Часть 1</h3>
         <ul>
-            <u>
-                <li>Наша первая программа</li>
-                <li>Пример цикла For</li>
-            </u>
+                <li><u>Наша первая программа</u></li>
+                <li><u>Пример цикла For</u></li>
         </ul>
         <p>Из множества существующих языков программирования Python — один из самых лёгких
             в изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился.
