--- a/01_HTML/base/index1.html
+++ b/01_HTML/base/index1.html
@@ -11,9 +11,9 @@
 <body>
     <h1>HOW-TO: Программа на Python, Часть 1</h1>
     <ul>
-            <li><em>>Программа на Python — часть 1</em</li>
-            <li><em>Программа на Python — часть 2</em</li>
-            <li><em>Программа на Python — часть 3</em</li>
+            <li><em>Программа на Python — часть 1</em></li>
+            <li><em>Программа на Python — часть 2</em></li>
+            <li><em>Программа на Python — часть 3</em></li>
     </ul>
     <h2>Содержание</h2>
     <h3>HOW-TO: Программа на Python, Часть 1</h3>
@@ -33,12 +33,13 @@
         <p>Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом мы разберёмся, что делает
             каждая строка и пойдём дальше.<Br><Br>
 
-            Введите эти 4 строки:</p><Br><Br>
+            Введите эти 4 строки:
+        </p>
 
         <code>#!/usr/bin/env python<Br>
         print 'Hello. I am a python program.'<Br>
         name = raw_input("What is your name?")<Br>
-        print "Hello there, " + name + "!"<Br><Br></code>
+        print "Hello there, " + name + "!"</code>
 
         <p>Это всё. Сохраните файл как <b>hello.py</b> в любом месте. Я предлагаю сохранить его в папке
             <b>python_examples</b> в домашнем каталоге. Этот пример показывает, как просто написать
