--- a/02_HTML/base/index.html
+++ b/02_HTML/base/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>
-        <i>Прогноз погоды</i>
+       <captuon><i>Прогноз погоды</i></captuon> 
     <table border="1">
         <tr>
             <th>Город</th>
@@ -22,7 +22,7 @@
             <td><b>Минск</b></td>
             <td>-5<sup>o</sup></td>
             <td>+5<sup>o</sup></td>
-            <td rowspan=3>+2<sup>o</sup></td>
+            <td rowspan=2>+2<sup>o</sup></td>
             <td>-10<sup>o</sup></td>
         </tr>
         <tr>
