--- a/02_HTML/base/index.html
+++ b/02_HTML/base/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-       <captuon><i>Прогноз погоды</i></captuon> 
-    <table border="1">
+    <table alight="center" border="1" width="50%">
+    <caption><i>Прогноз погоды</i></caption> 
+   
         <tr>
             <th>Город</th>
             <th>Утро</th>
