--- a/03_HTML/base/index3_3.html
+++ b/03_HTML/base/index3_3.html
@@ -11,30 +11,35 @@
 <body>
     <h1>HOW-TO: Программа на Python, Часть 3</h1>
     <ul>
-        <li><em>Программа на Python — часть 1</em></li>
-        <li><em>Программа на Python — часть 2</em></li>
-        <li><em>Программа на Python — часть 3</em></li>
+        <li><em><a href="index3_1.html">Программа на Python — часть 1</a></em></li>
+        <li><em><a href="index3_2.html">Программа на Python — часть 2</a></em></li>
+        <li><em><a href="index3_3.html">Программа на Python — часть 3</a></em></li>
     </ul>
+    <p><a name="top"></a></p>
     <h2>Содержание</h2>
     <h3>HOW-TO: Программа на Python, Часть 3</h2>
         <ul>
-            <li><u>Модули</u></li>
-            <li><u>Функции</u></li>
+            <li><a href="#moduli">Модули</a></li>
+            <li><a href="#funkcii">Функции</a></li>
         </ul>
         <hr>
         <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и
             присвоение, операторы <b>if</b> и <b>while</b>. Я обещал, что в этой части мы изучим модули и
             функции. Давайте начнём.</p>
+        <p><a name="moduli"></a></p>
         <h2>Модули</h2>
+        <a href="#top">К содержанию</a>
         <p>Модули предлагают способ расширить программирование на Python. Вы можете создать
             свои модули, использовать те, которые поставляются с Python или которые написали
             другие. В самом Python есть сотни модулей, которые облегчают написание программ.
             Список модулей, поставляемых с Python, находится по адресу:
-            <a style="color: #000000"
-                href="docs.python.org/modindex.html">http://docs.python.org/modindex.html</a><a></a>. Некоторые модули
+            <i><a href="docs.python.org/modindex.html">http://docs.python.org/modindex.html</a></i>. Некоторые модули
             предназначены для определённых
             операционных систем, но большинство из них кроссплатформенные и работают
-            одинаково на <u>Linux</u>, <u>Ma</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля
+            одинаково на <a href="https://ru.wikipedia.org/wiki/Linux" target="_blank">Linux, </a><a
+                href="https://ru.wikipedia.org/wiki/Mac" target="_blank">Mac</a> и <a
+                href="https://ru.wikipedia.org/wiki/Windows" target="_blank">Microsoft Windows</a>. Для использования
+            внешнего модуля
             необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
             называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
             используем этот модуль в нашем первом примере.
@@ -51,7 +56,9 @@
             мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать
             модуль «random». Мы должны явно указать Python на это.</p>
         <hr>
+        <p><a name="funkcii"></a></p>
         <h2>Функции</h2>
+        <a href="#top">К содержанию</a>
         <p>Когда мы импортировали модуль random, мы использовали функцию <b>randint()</b>. Функция
             — это блок кода, который создан для того, чтобы вызывать его в программе, обычно,
             более одного раза. Это упрощает работу над программой и предотвращает набор одного и
@@ -93,7 +100,7 @@
             DoTwo(1,2)<Br>
             DoTwo(1,4)<Br>
             DoTwo(10,5)</code></p>
-        <p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо поменять в функции,
+        <p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет что-либо поменять в функции,
             мы сможем сделать это, не создавая проблем для нашей
             программы. Чтобы вызвать функцию, нужно написать её имя и параметры</p>
 </body>
