--- a/03_HTML/add/index.html
+++ b/03_HTML/add/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+<!-- в процессе  задание не сделано-->
 <body>
     <h1>Горизонтальное меню</h1>
     <menu>
