--- a/03_HTML/add/index.html
+++ b/03_HTML/add/index.html
@@ -7,82 +7,89 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
-<!-- в процессе  задание не сделано-->
+
 <body>
     <h1>Горизонтальное меню</h1>
     <menu>
-        <a href="#">Главная</a>|
-        <a href="#">Каталог</a>|
-        <a href="#">Акции</a>|
-        <a href="#">О нас</a>
+        <a href="index.html">Главная</a>|
+        <a href="site.by/catalog.html">Каталог</a>|
+        <a href="site.by/promo.html">Акции</a>|
+        <a href="site.by/about.html">О нас</a>
     </menu>
 
     <h1>Меню список</h1>
     <menu>
-        <li><a href="">Главная</a></li>
-        <li><a href="">Каталог</a></li>
-        <li><a href="">Акции </a></li>
-        <li><a href="">О нас</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="site.by/catalog.html">Каталог</a></li>
+        <li><a href="site.by/promo.html">Акции </a></li>
+        <li><a href="site.by/about.html">О нас</a></li>
     </menu>
     <h1>Меню с вложенным списком</h1>
-    
+
     <ul>
-        <li><a href="">Главная</a></li>
+        <li><a href="index.html">Главная</a></li>
         <ul>
-            <li><a href="">Новости</a></li>
+            <li><a href="site.by/news/news.html">Новости</a></li>
         </ul>
-        <li><a href="">Каталог</a></li>
+        <li><a href="site.by/catalog.html">Каталог</a></li>
         <ul>
-            <li><a href="">Осень-Зима</a></li>
-            <li><a href="">Весна-Лето</a></li>
+            <li><a href="site.by/catalog/a_w.html">Осень-Зима</a></li>
+            <li><a href="site.by/catalog/s_s.html">Весна-Лето</a></li>
         </ul>
-        <li><a href="">Акции </a></li>
+        <li><a href="site.by/promo.html">Акции </a></li>
         <ul>
-            <li><a href="">Актуальные</a></li>
-            <li><a href="">Прошедшие</a></li>
+            <li><a href="site.by/promo/last.html">Актуальные</a></li>
+            <li><a href="site.by/promo/old.html">Прошедшие</a></li>
         </ul>
-        <li><a href="">О нас</a></li>
+        <li><a href="site.by/about.html">О нас</a></li>
         <ul>
-            <li><a href="">Контакты</a></li>
-            <li><a href="">Проезд</a></li>
+            <li><a href="site.by/about/contacts.html">Контакты</a></li>
+            <li><a href="site.by/about/scheme.html">Проезд</a></li>
         </ul>
     </ul>
     <h1>Меню таблица с вложенными таблицами</h1>
-  <table>
-    <tr>
-        <td>Главная</td>
-    </tr>
-    <tr>
-        <td align="right">Новости</td>
-    </tr>
-    <tr>
-        <td>Каталог</td>
-    </tr>
-    <tr>
-        <td align="right">Осень-Зима</td>
-    </tr>
-    <tr>
-        <td align="right">Весна-Лето</td>
-    </tr>
-    <tr>
-        <td>Акции</td>
-    </tr>
-    <tr>
-        <td align="right">Актуальные</td>
-    </tr>
-    <tr>
-        <td align="right">Прошедшие</td>
-    </tr>
-    <tr>
-        <td>О нас</td>
-    </tr>
-    <tr>
-        <td align="right">Контакты</td>
-    </tr>
-    <tr>
-        <td align="right">Проезд</td>
-    </tr>
-</table>
-</body>
+    <table width="20%">
 
+        <tr>
+            <td colspan=2> <a href="index.html">Главная</a> </td>
+        </tr>
+        <tr>
+            <td width="5"></td>
+            <td><a href="site.by/news/news.html">Новости</a></td>
+        </tr>
+        <tr>
+            <td colspan=2><a href="site.by/catalog.html">Каталог</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="site.by/catalog/a_w.html">Осень-Зима</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="site.by/catalog/s_s.html">Весна-Лето</a></td>
+        </tr>
+        <tr>
+            <td colspan=2><a href="site.by/promo.html">Акции </a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="site.by/promo/last.html">Актуальные</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="site.by/promo/old.html">Прошедшие</a></td>
+        </tr>
+        <tr>
+            <td colspan=2><a href="site.by/about.html">О нас</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="site.by/about/contacts.html">Контакты</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="site.by/about/scheme.html">Проезд</a></td>
+        </tr>
+    </table>
+</body>
 </html>
