--- a/03_HTML/add/site.by/index.html
+++ b/03_HTML/add/site.by/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <h1>Горизонтальное меню</h1>
+    <menu>
+        <a href="index.html">Главная</a>|
+        <a href="catalog.html">Каталог</a>|
+        <a href="promo.html">Акции</a>|
+        <a href="about.html">О нас</a>
+    </menu>
+
+    <h1>Меню список</h1>
+    <menu>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="promo.html">Акции </a></li>
+        <li><a href="about.html">О нас</a></li>
+    </menu>
     <h1>Меню с вложенным списком</h1>
 
     <ul>
@@ -30,5 +47,82 @@
             <li><a href="about/scheme.html">Проезд</a></li>
         </ul>
     </ul>
+    <h1>Меню таблица с вложенными таблицами</h1>
+    <table>
+        <tr>
+            <td>
+                <a href="index.html">Главная</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="news/news.html">Новости</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <a a href="catalog.html">Каталог</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="catalog/a_w.html">Осень-Зима</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="catalog/s_s.html">Весна-Лето</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td>
+                <a href="promo.html">Акции </a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="promo/last.html">Актуальные</a>
+                        </td>
+                        </tr>
+                        <tr>
+                        <td>
+                            <a href="promo/old.html">Прошедшие</a>
+                        </td>
+                    </tr>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td>
+                <a href="about.html">О нас</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="about/contacts.html">Контакты</a>
+                        </td>
+                    </tr>
+                <tr>
+                        <td>
+                            <a href="about/scheme.html">Проезд</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
 </body>
-</html>
+
+</html>            
