--- a/03_HTML/add/site.by/promo/old.html
+++ b/03_HTML/add/site.by/promo/old.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <h1>Акции прошедшие</h1>
+    <h1>Горизонтальное меню</h1>
+    <menu>
+        <a href="../index.html">Главная</a>|
+        <a href="../catalog.html">Каталог</a>|
+        <a href="../promo.html">Акции</a>|
+        <a href="../about.html">О нас</a>
+    </menu>
+
+    <h1>Меню список</h1>
+    <menu>
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li><a href="../promo.html">Акции </a></li>
+        <li><a href="../about.html">О нас</a></li>
+    </menu>
+    <h1>Меню с вложенным списком</h1>
+
     <ul>
         <li><a href="../index.html">Главная</a></li>
         <ul>
@@ -29,5 +46,80 @@
             <li><a href="../about/scheme.html">Проезд</a></li>
         </ul>
     </ul>
+    <h1>Меню таблица с вложенными таблицами</h1>
+    <table>
+        <tr>
+            <td>
+                <a href="../index.html">Главная</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="../news/news.html">Новости</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <a a href="../catalog.html">Каталог</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="../catalog/a_w.html">Осень-Зима</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="../catalog/s_s.html">Весна-Лето</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td>
+                <a href="../promo.html">Акции </a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="../promo/last.html">Актуальные</a>
+                        </td>
+                        </tr>
+                        <tr>
+                        <td>
+                            <a href="../promo/old.html">Прошедшие</a>
+                        </td>
+                    </tr>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td>
+                <a href="../about.html">О нас</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="../about/contacts.html">Контакты</a>
+                        </td>
+                    </tr>
+                <tr>
+                        <td>
+                            <a href="../about/scheme.html">Проезд</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
