--- a/01_CSS/base/index3.html
+++ b/01_CSS/base/index3.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css1.css" rel="stylescreen" media="screen"/>
-    <link href="css2.css" rel="styleprint" media="print"/>
+    <link href="css1.css" rel="stylescreen" media="screen">
+    <link href="css2.css" rel="styleprint" media="print">
     <title>Document</title>
 </head>
 
