--- a/02_CSS/add2/index.html
+++ b/02_CSS/add2/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- когда разворачиваю окно, правый край блоков не фиксируется по ширине окна-->
+    <div class="flex">
+        <div class="navigation">
+            <h4>Блок навигации</h4>
+            <ul>
+                <li>
+                    Ширина 15em</li>
+                <li>Должен присутствовать цвет фона</li>
+                <li>Располагается слева</li>
+                <li> Блок навигации наполните контентом достаточным, чтобы по высоте он начал захватывать вторую статью,
+                    как
+                    показано в данном примере.Блок навигации наполните контентом достаточным, чтобы по высоте он начал
+                    захватывать вторую статью, как показано в данном примере</li>
+            </ul>
+        </div>
+        <div>
+            <div class="article1">
+                <h4>Статья 1</h4>
+                Размер блока:
+                Занимает всю доступную ширину
+                Должен присутствовать цвет фона
+                Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom
+            </div>
+
+
+            <div class="article2">
+                <h4>Статья 2</h4>
+                Размер блока:
+                Занимает всю доступную ширину
+                Должен присутствовать цвет фона
+                Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom.
+                Картинка
+                вставлена при помощи тега, плавание организованно по правому краю внутри данной статьи для этой
+                картинки.
+                <img src="email.jpg" alt="mail" class="img">
+            </div>
+            <div class="down">
+                Нижний блок, подвал. Занимает всю доступную шириную Высота определяется помещенным внутрь контентом.
+            </div>
+        </div>
+        
+    </div>
 </body>
+
 </html>
