--- a/02_CSS/base3/index.html
+++ b/02_CSS/base3/index.html
@@ -13,36 +13,45 @@
     <div class="navigation">
         <h4>Блок навигации</h4>
         <ul>
-            <li>
-                Ширина 15em</li>
+            <li>Ширина 15em</li>
             <li>Должен присутствовать цвет фона</li>
             <li>Располагается слева</li>
-            <li> Блок навигации наполните контентом достаточным, чтобы по высоте он начал захватывать вторую статью, как
+            <li> Блок навигации наполните контентом достаточным, чтобы по высоте он начал захватывать вторую статью,
+                как
                 показано в данном примере.Блок навигации наполните контентом достаточным, чтобы по высоте он начал
                 захватывать вторую статью, как показано в данном примере</li>
         </ul>
     </div>
-   
         <div class="article">
             <h4>Статья 1</h4>
-            Размер блока:
-            Занимает всю доступную ширину
-            Должен присутствовать цвет фона
-            Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom
-        </div>
+            <p>
+                Размер блока:
+                Занимает всю доступную ширину
+                Должен присутствовать цвет фона
+                Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom
+            </p>
+    </div>
         <div class="article">
             <h4>Статья 2</h4>
-            Размер блока:
-            Занимает всю доступную ширину
-            Должен присутствовать цвет фона
-            Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom. Картинка
-            вставлена при помощи тега, плавание организованно по правому краю внутри данной статьи для этой картинки.
-            <img src="email.jpg" alt="mail"  class="img">
+            <p>
+                Размер блока:
+                Занимает всю доступную ширину
+                Должен присутствовать цвет фона
+                Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom.
+                Картинка
+                вставлена при помощи тега, плавание организованно по правому краю внутри данной статьи для этой
+                картинки.
+            </p>
+            <img src="email.jpg" alt="mail" class="img">
+            <div style="clear:both;"></div>
         </div>
 
-    <div class="down" >
-        Нижний блок, подвал. Занимает всю доступную шириную Высота определяется помещенным внутрь контентом.
+
+        <div class="down">
+            Нижний блок, подвал. Занимает всю доступную шириную Высота определяется помещенным внутрь контентом.
     </div>
+
+
 </body>
 
 </html>
