--- a/02_CSS/add2/index.html
+++ b/02_CSS/add2/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <!-- когда разворачиваю окно, правый край блоков не фиксируется по ширине окна-->
     <div class="flex">
         <div class="navigation">
             <h4>Блок навигации</h4>
@@ -24,32 +24,34 @@
                     захватывать вторую статью, как показано в данном примере</li>
             </ul>
         </div>
-        <div>
-            <div class="article1">
-                <h4>Статья 1</h4>
-                Размер блока:
-                Занимает всю доступную ширину
-                Должен присутствовать цвет фона
-                Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom
-            </div>
-
-
-            <div class="article2">
-                <h4>Статья 2</h4>
-                Размер блока:
-                Занимает всю доступную ширину
-                Должен присутствовать цвет фона
-                Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom.
-                Картинка
-                вставлена при помощи тега, плавание организованно по правому краю внутри данной статьи для этой
-                картинки.
-                <img src="email.jpg" alt="mail" class="img">
-            </div>
-            <div class="down">
-                Нижний блок, подвал. Занимает всю доступную шириную Высота определяется помещенным внутрь контентом.
+            <div class="article">
+                <div class="article2">
+                    <h4>Статья 1</h4>
+                    <p>
+                        Размер блока:
+                        Занимает всю доступную ширину
+                        Должен присутствовать цвет фона
+                        Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства margin-bottom
+                    </p>
+                </div>
+                <div class="article2">
+                    <h4>Статья 2</h4>
+                    <p>Размер блока:
+                        Занимает всю доступную ширину
+                        Должен присутствовать цвет фона
+                        Во всех "статьях" сделайте отступ снизу от соседей равным .2m, при помощи свойства
+                        margin-bottom.
+                        Картинка
+                        вставлена при помощи тега, плавание организованно по правому краю внутри данной статьи для этой
+                        картинки.
+                    </p>
+                    <img src="email.jpg" alt="mail" class="img">
+                </div>
             </div>
         </div>
-        
+        <div class="down">
+            Нижний блок, подвал. Занимает всю доступную шириную Высота определяется помещенным внутрь контентом.
+        </div>
     </div>
 </body>
 
