--- a/04_CSS/add/1/index.html
+++ b/04_CSS/add/1/index.html
@@ -33,13 +33,22 @@
     </h2>
     <ul>
         <li>
-            <a href="img/word.jpg">Документ MS Word</a>
+            <a href="#">Документ MS Word</a>
+            <span>
+                <img src="img/word.jpg" alt="document">
+            </span>
         </li>
         <li>
-            <a href="img/pdf.png">Документ PDF</a>
+            <a href="#">Документ PDF</a>
+            <span>
+                <img src="img/pdf.png" alt="document">
+            </span>
         </li>
         <li>
-            <a href="img/arhiv.gif">Архив</a>
+            <a href="#">Архив</a>
+            <span>
+                <img src="img/arhiv.gif" alt="document">
+            </span>
         </li>
     </ul>
 </body>
