--- a/Frameworks/index.html
+++ b/Frameworks/index.html
@@ -1,109 +1,134 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/app.css" />
-  </head>
-
-  <body>
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <h1>HOW-TO: Программа на Python, Часть 1</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <title>Document</title>
+    <style>
+        .grid-x {
+            justify-content: center;
+        }
+        #left {
+            color: rgb(51, 194, 230);
+        }
+        a {
+            color: rgb(51, 194, 230);
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="grid-x">
+            <div class="large-10 cell">
+                <h1>HOW-TO: Программа на Python, Часть 1</h1>
+            </div>
         </div>
-      </div>
-
-      <div class="grid-x grid-padding-x">
-        <div class="small-4 small-4 cell" style="color: rgb(58, 82, 192);">
-        
-          <ul>
-            <li><em><u>Программа на Python — часть 1</u></em></li>
-            <li><em><u>Программа на Python — часть 2</u></em></li>
-            <li><em><u>Программа на Python — часть 3</u></em></li>
-          </ul>
-          <h2>Содержание</h2>
-          <ul>
-            <li><u>Наша первая программа</u></li>
-            <li><u>Пример цикла For</u></li>
-          </ul>
-          <h2>Наша первая программа</h2>
-          <span><u>К содержанию</u></span>
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-          <h2>Пример цикла For</h2>
-          <span><u>К содержанию</u></span>
+        <div class="grid-x">
+            <div id="left" class="large-3 medium-5 cell">
+                <ul>
+                    <li><a href="#">Программа на Python &mdash; часть 1</a></li>
+                    <li><a href="#">Программа на Python &mdash; часть 2</a></li>
+                    <li><a href="#">Программа на Python &mdash; часть 3</a></li>
+                </ul>
+            </div>
+            <div class="large-7 medium-7 cell">
+                <h2>HOW-TO: Программа на Python, Часть 1</h2>
+            </div>
         </div>
-        <div class="small-8 small-8 cell">
-          <h3>HOW-TO: Программа на Python, Часть 1</h3>
-          <p>
-            Из множества существующих языков программирования Python — один из
-            самых лёгких в изучении. Он создан в конце 80-х годов XX века, но с
-            тех пор он сильно изменился. Хотя Python входит в состав большинства
-            дистрибутивов Linux, на него часто не обращают внимания при выборе
-            языка для изучения. В этой статье мы рассмотрим создание консольных
-            приложений, а в следующей — программирование графических интерфейсов
-            <u>(GUI)</u>. Давайте создадим простую программу прямо сейчас.
-          </p>
-          <br>
-          <p>
-            Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом
-            мы разберёмся, что делает каждая строка и пойдём дальше.<br><br>
-
-            Введите эти 4 строки:
-          </p>
-
-          <code
-            >#!/usr/bin/env python<br>
-            print 'Hello. I am a python program.'<br>
-            name = raw_input("What is your name?")<br>
-            print "Hello there, " + name + "!"</code
-          >
-
-          <p>
-            Это всё. Сохраните файл как <b>hello.py</b> в любом месте. Я
-            предлагаю сохранить его в папке <b>python_examples</b> в домашнем
-            каталоге. Этот пример показывает, как просто написать программу на
-            Python. Для запуска программы нужно сделать её файл исполняемым. Для
-            этого введите в терминале<br><br>
-
-            <b><i><u>chmod +x hello.py</u></i></b><br><br>
-
-            в папке, в которой вы сохранили программу. Теперь запустите её.<br><br>
-
-            <code>
-              greg@earth:~/python_examples$ ./hello.py<br>
-              Hello. HI am a python program.<br>
-              What is your name? Ferd Burphel<br>
-              Hello there, Ferd Burphel!<br>
-              greg@earth:~/python_examples$
-            </code>
-            <br><br>
-
-            Вот и всё.
-          </p>
-          <br>
-
-          <p>
-            Теперь давайте рассмотрим пример программирования цикла. Запустите
-            текстовый редактор и наберите следующую программу: <br><br>
-
-            <code
-              >#!/usr/bin/env python<br>
-              for cntr in range(0,10):<br>
-              &nbsp;&nbsp;&nbsp;&nbsp; print cntr</code>
-            <br><br>
-
-            <i>Не забудьте поставить символ табуляции перед строкой «print
-              cntr».</i>
-            Это важно. В Python для указания на блоки кода используются не
-            круглые «(» и фигурные «{» скобки как в других языках
-            программирования, а отступы
-          </p>
+        <div class="grid-x">
+            <div id="left" class="large-3 medium-5 cell">
+                <h2 id="main">Содержание</h2>
+                <ul>
+                    <li><a href="#our_first_program">Наша первая программа</a></li>
+                    <li><a href="#for">Пример цикла For</a></li>
+                </ul>
+            </div>
+            <div class="large-7 medium-7 cell">
+                <p>
+                    Из множества существующих языков программирования Python &mdash; один из самых лёгких в 
+                    изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился. Хотя 
+                    Python входит в состав большинства дистрибутивов Linux, на него часто не обращают 
+                    внимания при выборе языка для изучения. В этой статье мы рассмотрим создание консольных 
+                    приложений, а в следующей &mdash; программирование графических интерфейсов 
+                    (<ins>GUI</ins>). Давайте создадим простую программу прямо сейчас.
+                </p>
+            </div>
         </div>
-      </div>
+        <div class="grid-x">
+            <div id="left" class="large-3 medium-5 cell">
+                <h2 id="our_first_program">Наша первая программа</h2>
+                <p>
+                    <a href="#main">К содержанию</a>
+                </p>
+            </div>
+            <div class="large-7 medium-7 cell">
+                <p>
+                    Наберём код в текстовом редакторе (например, в <strong>gedit</strong>). Потом мы разберёмся, 
+                    что делает каждая строка и пойдём дальше.
+                </p>
+                <p>
+                    Введите эти 4 строки:
+                </p>
+                <br>
+                <p><code>
+                    #!/usr/bin/env python<br>
+                    print 'Hello. I am a python program.'<br>
+                    name = raw_input("What is your name?")<br>
+                    print "Hello there, " + name + "!"</code>
+                </p>
+                <p>
+                    Это всё. Сохраните файл как <strong>hello.py</strong> в любом месте. Я предлагаю сохранить 
+                    его в папке <strong>python_examples</strong> в домашнем каталоге. Этот пример показывает, 
+                    как просто написать программу на Python. Для запуска программы нужно сделать её файл 
+                    исполняемым. Для этого введите в терминале
+                </p>
+                <p><code><ins><em><strong>chmod +x hello.py</strong></em></ins></code></p>
+                <p>
+                    в папке, в которой вы сохранили программу. Теперь запустите её.
+                </p>
+                <br>
+                <p><code>
+                    greg@earth:&#126;/python_examples$ ./hello.py<br>
+                    Hello. I am a python program.<br>
+                    What is your name? Ferd Burphel<br>
+                    Hello there, Ferd Burphel!<br>
+                    greg@earth:&#126;/python_examples$</code>
+                </p>
+                <p>
+                    Вот и всё.
+                </p>
+            </div>
+        </div>
+        <div class="grid-x">
+            <div id="left" class="large-3 medium-5 cell">
+                <h2 id="for">Пример цикла For</h2>
+                <p>
+                    <a href="#main">К содержанию</a>
+                </p>
+            </div>
+            <div class="large-7 medium-7 cell">
+                <p>
+                    Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый редактор и 
+                    наберите следующую программу:
+                </p>
+                <br>
+                <p><code>
+                    #!/usr/bin/env python<br>
+                    for cntr in range(0,10):<br>
+                    &nbsp; &nbsp; print cntr</code>
+                </p>
+                <p>
+                    <em>Не забудьте поставить символ табуляции перед строкой &laquo;print cntr&raquo;</em>. 
+                    Это важно. В Python для указания на блоки кода используются не круглые 
+                    &laquo;&#40;&raquo; и фигурные &laquo;&#123;&raquo; скобки как в других языках 
+                    программирования, а отступы.
+                </p>
+            </div>
+        </div>
     </div>
-  </body>
+</body>
 </html>
